// Copyright (C) 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package atom_pb;
// cc_package

// Invoke is the atom that marks the invocation point in the set of atoms for a command.
message Invoke {}

// Aborted is an extra used to mark atoms which did not finish execution.
// This can be expected (e.g. GL error), or unexpected (failed assertion).
message Aborted {
    bool IsAssert = 1;
    string Reason = 2;
}

// Resource is the storage type for a resource atom.
message Resource {
    // Id is the resource id of the data blob.
    string id = 1;
    // Data is the actual data payload.
    bytes data = 2;
}

// FramebufferObservation is an Atom that holds a snapshot of the color-buffer
// of the bound framebuffer at the time of capture. These atoms can be used to
// verify that replay gave the same results as what was captured.
message FramebufferObservation {
    // Framebuffer width in pixels
    uint32 OriginalWidth = 1;
    // Framebuffer width in pixels
    uint32 OriginalHeight = 2;
    // Width of downsampled data.
    uint32 DataWidth = 3;
    // height of downsampled data.
    uint32 DataHeight = 4;
    // The RGBA color-buffer data
    bytes Data = 5;
}

// CommandCounter holds the counter value of the begining and end of an API
// command. It should only be sent for the first completed graphics command, or
// for any graphics command which overlaps the startup or termination of
// another graphics command. Unless this is the first completed graphics
// command, CounterAtEnd-CounterAtBegin should never be 1. We expect uses to
// be relatively rare.
message CommandCounter {
	// counter value at the begain of an API command.
    uint64 CounterAtBegin = 1;
	// counter value at the end of an API command.
    uint64 CounterAtEnd = 2;
}
