// Copyright (C) 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package capture;
// cc_package

import "core/os/device/device.proto";

// Capture holds all the information about a single imported capture.
// This is not the service representation of the capture as it contains internal
// fields.
message Capture {
	ID id = 1;
	string name = 2;
	device.Instance device = 3;
	ID commands = 4;
	repeated ID apis = 5;
	repeated MemoryRange observed = 6;
}

message ID {
    bytes data = 1;
}

message MemoryRange {
    uint64 base = 1;
    uint64 size = 2;
}